objects/Expense__c/Expense__c.object-meta.xml
<CustomObject>
    <description>Record every expense made</description>
    <label>Expense</label>
    <nameField>
        <label>Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>