objects/Expense__c/fields/Why_Expense__c.field-meta.xml
<CustomField>
    <fullName>Why_Expense__c</fullName>
    <description>Describe why the expense.</description>
    <inlineHelpText>Describe why the expense.</inlineHelpText>
    <label>Why Expense?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>